--- a/applications/giropops-senhas.yaml
+++ b/applications/giropops-senhas.yaml
@@ -14,6 +14,7 @@ spec:
     repoURL: https://github.com/codestux/argocd.git
     targetRevision: feat/day2
   syncPolicy:
-    automated: {}
+    automated:
+      selfHeal: true
     syncOptions:
     - CreateNamespace=true
