--- a/applications/app-of-apps.yaml
+++ b/applications/app-of-apps.yaml
@@ -1,21 +1,27 @@
-{{ if .Values.argocd.randomLogger.enabled}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: random-logger
+  name: app-of-apps
   namespace: argocd
 spec:
   destination:
-    namespace: random-logger
+    namespace: argocd
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: random-logger/helm
+    path: app-of-apps
+    helm:
+      parameters:
+      - name: "argocd.giropopsSenhas.enabled"
+        value: "false"
+      - name: "argocd.randomLogger.enabled"
+        value: "true"
     repoURL: https://github.com/codestux/argocd.git
     targetRevision: feat/day2
   syncPolicy:
     automated:
       selfHeal: true
+      prune: true
     syncOptions:
     - CreateNamespace=true
-{{ end }}
+    - PruneLast=true
